<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/enter_info"
            android:textSize="25sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/position"
            android:hintTextColor="#757575"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/phone"
            android:inputType="phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/salary"
            android:inputType="number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

    </LinearLayout>
</ScrollView>