<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:fontFamily="@font/teddy_bear"
        android:gravity="center"
        android:text="@string/text_view"
        android:textColor="@color/design_default_color_error"
        android:textSize="30sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text"
        android:paddingLeft="20dp"
        android:textSize="25sp" />

    <Button
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="20"
        android:text="@string/button"
        android:textSize="25sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:paddingStart="70dp"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/switch_text"
        android:textSize="10sp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="О нет"
        android:layout_weight="1"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="О нет"
        android:buttonTint="@color/red"
        android:layout_weight="1"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="И да"
        android:layout_weight="1"/>

    <ToggleButton

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textOn="Хрю"
        android:textOff="Гав"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:textSize="50sp"
        />


</androidx.appcompat.widget.LinearLayoutCompat>